# FUNCPRO-Game

./: .gitignore  README.md  gloss-counter.cabal  highscores.txt  if_you_use_stack_rename_this_to_stack.yaml  shootem.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Controller.hs  Main.hs  Model.hs  View.hs
