
name:                shootem
version:             0.2.0.0
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable shootem
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss >= 1.13,
                       random,
                       directory
  hs-source-dirs:      src
  other-modules:       Controller
                     , Model
                     , View
  default-language:    Haskell2010